src/objects/Clustering_Run__c.object
<CustomObject>
    <description>This object represents a run of the K-Means clustering algorithm with a series of associated iteration records.</description>
    <fields>
        <fullName>Dimensions__c</fullName>
        <label>Dimensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ids_for_Clustering__c</fullName>
        <description>This field is a hidden field that details that Ids of the records that were used in the clustering algorithm.</description>
        <label>Ids for Clustering</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Number_of_Clusters__c</fullName>
        <description>The number of clusters that we initially want to work with - note that at the end of our algorithm this may have reduced to a smaller number.</description>
        <label>Number of Clusters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Value__c</fullName>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Clustering Run</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dimensions__c</columns>
        <columns>Max_Value__c</columns>
        <columns>Initial_Number_of_Clusters__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Clustering Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clustering Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>